main.css
html{font-family:Arial}

body{
  margin: 0;
  padding: 0;
  font-size: 28px;
}

.navbar{  /* Working on the navigation bar */
  display: flex;  /* Use flexbox to have options appear side by side */
  /*position: relative;*/
  justify-content: space-between; /* Pushes them as far apart as possible */
  align-items: center; /* Try stretch */
  background-color: #333;
  color: white; /*Text color*/
  overflow:hidden;
  margin:0;
  padding:0;
  top:0;
  position: -webkit-sticky; 
  position: sticky;
}
.navbar-links ul{ /* Working on the navbar links */
  margin: 0;
  padding: 0;
  display: flex;
}
.navbar-links li{ /* Working on the list items to edit */
  list-style: none; /* removes list style (no dots or anything) */
}
.navbar-links li a{ /* Edit all the anchor tag styles */
  text-decoration: none;
  color:white;
  padding: 1rem;
  display: block;
}
.navbar-links li:hover{  /*Changing what happens when hovering mouse over list items*/
  background-color: #555
}

/* Mobile menu drop down bar*/
.toggle-button{
  position: fixed; /*Forces it to be in a position*/
  top: 1rem;
  right: 1rem;
  display: none; /* Have it not display by default*/
  /*We want it to only display when we have smaller screens*/
  flex-direction: column; /* menu is a collumn (dropdown) menu*/
  justify-content: space-between; /* maximize space */
  width: 30px;
  height: 21px;
}
.toggle-button .bar{
  height: 5px;
  width: 100%;
  background-color: #0096FF;
  border-radius: 10px;
}

/* This is called a media query
When a specific condition is met it runs the code*/
@media (max-width: 600px) {
  .toggle-button{
    
    
    display: flex;
  }

  .navbar{
    flex-direction: column;
    align-items: flex-start;
    overflow: auto;
    position:relative 
    
  }
  .navbar-links{
    display: none;
    width: 100%;
  }
  .navbar-links ul{
    width: 100%;
    flex-direction: column;
  }
  .navbar-links li{
    text-align: center;
  }
  .navbar-links li a{
    padding: .5rem 1rem;
  }
  .navbar-links.active{ /*Navbar being used*/
    display: flex;
  }
}
/* End of Media Query*/

.header{
  background-color: #474747;
  padding-left: 20px;
  padding-top: 10px;
  padding-bottom: 10px;
}

.footer{
  background-color: #474747;
  padding-left: 20px;
  padding-top: 10px;
  padding-bottom: 10px;
}

.header_textBig{
  font-size: 8vw;
  color:white;
}
.header_textSmall{
  font-size: 4vw;
  color:darkgrey;
}
.footer_textBig{
  font-size: 30px;
  color:white;
}
.footer_textSmall{
  font-size: 26px;
  color:white;
}

.banner{
  position:absolute;
  top:0; left:0; right:0;
  height: 100;
  width: 100%;
}

.controls{
  border: 0.5px solid gray;
}

.padding_designs{
  margin: 20 100 0 100;          /* Top Right Bottom Left */
  width:60%;
  height: auto;
}

.padding_designstext{
  margin: 0 150 20 150;          /* Top Right Bottom Left */
}

.main_padding{
  margin: 0 100 0 100;          /* Top Right Bottom Left */
}

.Space{
  padding-top: 50px;
  padding-bottom: 50px;
}

/* This is for the Photo to scale */
.container {
  display: flex;
  align-items: center;
  justify-content: center
}

img {
  max-width: 100%
}

.image {
  padding-top: 10px;
  padding-left: 10px;
  padding-right: 10px;
  flex-basis: 80%
}

.text{
  font-size: 20px;
  padding-left: 20px;
  padding-right: 20px;
  font-size:3vw         /* vw = viewpoint width which will scale with window size*/
}

.small_text{
  font-size: 12px;

  font-size:2vw         /* vw = viewpoint width which will scale with window size*/
}

/* ---End of: "This is for the Photo to scale" */
.border{
  border: 0.5px solid gray;   /* Putting grey border */
  border-radius: 10px;          /* Rounding Edges */
  height: 250;
  width: 250;
}

.currentpage {  
  background-color: #0096FF;  
}
 
 /* SOCIAL MEDIA CIRCLES*/
.fa {                 /* Social Media Icon structure */
  padding: 20px;
  font-size: 30px;
  width: 30px;
  text-align: center;
  text-decoration: none;
  border-radius: 50%;
}
.fa:hover {           /* Hover Effect on Social Media Icons */
  opacity: 0.7;
}
/* Set a specific color for each brand */
/* LinkedIn */
.fa-LinkedIn {
  background: #007bb5;
  color: white;
}
.fa-Instagram {
  background: #ea4c89;
  color: white;
}
.fa-Github {
  background: white;
  color: black;
}

